--- a/EHC/AndroidManifest.xml
+++ b/EHC/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="ehcontrol.net"
     android:versionCode="1"
     android:versionName="1.0" 
+    
     >
     <!-- android:versionName : Versión visible para el usuario -->
 	<!-- android:installLocation = "preferExternal" : Lugar donde va a instalarse la app. (tarjeta SD)-->
@@ -11,13 +12,27 @@
         android:minSdkVersion="17"
         android:targetSdkVersion="19" />
     
+    <!-- Permiso de acceso a todas las APIs de internet -->
+	<uses-permission android:name = "android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	
+	<uses-permission android:name="android.permission.SET_DEBUG_APP"/>
+	
+	<!-- Permiso de almacenamiento externo -->
+	<uses-permission android:name = "android.permission.WRITE_EXTERNAL_STORAGE"/>
+	
+	<!-- Permiso anti-bloqueo -->
+	<uses-permission android:name = "android.permission.WAKE_LOCK"/>
+	
+	<!-- Requerimiento Hardware. Pantalla multitouch -->
+	<uses-feature android:name="android.hardware.touchscreen.multitouch" android:required="true"/>"
+	
 	<!-- application : Componentes de la app. -->
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" 
-        android:debuggable="true">
+        android:theme="@style/AppTheme">
         
         <activity
             android:name="ehcontrol.net.LogIn"
@@ -159,15 +174,4 @@
         
     </application>
     
-    <!-- Permiso de acceso a todas las APIs de internet -->
-	<uses-permission android:name = "android.permission.INTERNET" />
-	
-	<!-- Permiso de almacenamiento externo -->
-	<uses-permission android:name = "android.permission.WRITE_EXTERNAL_STORAGE"/>
-	
-	<!-- Permiso anti-bloqueo -->
-	<uses-permission android:name = "android.permission.WAKE_LOCK"/>
-	
-	<!-- Requerimiento Hardware. Pantalla multitouch -->
-	<uses-feature android:name="android.hardware.touchscreen.multitouch" android:required="true"/>"
 </manifest>
