--- a/EverywhereHouseController/bin/AndroidManifest.xml
+++ b/EverywhereHouseController/bin/AndroidManifest.xml
@@ -71,7 +71,17 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        
+        <activity 
+            android:name="ehc.net.PlacesMenu" 
+            android:theme="@style/AppTheme" 
+            android:label="@style/AppTheme"
+            android:screenOrientation="portrait"
+            android:configChanges="keyboard|keyboardHidden|orientation"> 
+          	<intent-filter>
+          	    <action android:name="ehc.net.PlacesMenu" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         
         
     </application>
