--- a/EverywhereHouseController/bin/AndroidManifest.xml
+++ b/EverywhereHouseController/bin/AndroidManifest.xml
@@ -13,8 +13,9 @@
         android:normalScreens="true"
         android:largeScreens="true"
         android:xlargeScreens="true"
-        android:anyDensity="true" />
-
+        android:anyDensity="true" 
+        android:resizeable="true"/>
+	
     <!-- Permiso de acceso a todas las APIs de internet -->
 	<uses-permission android:name = "android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -64,7 +65,6 @@
         <activity 
             android:name="ehc.net.ManagementMenu" 
             android:theme="@style/Theme.MyTheme"
-            android:uiOptions="splitActionBarWhenNarrow"
             android:screenOrientation="portrait"
             android:configChanges="keyboard|keyboardHidden|orientation"> 
           	<intent-filter>
