[ADDED] Using the 'SimpleActivityTask.java' class  for 'doaction' server function. [ADDED] Custom visual effects.

--- a/EverywhereHouseController/AndroidManifest.xml
+++ b/EverywhereHouseController/AndroidManifest.xml
@@ -8,13 +8,13 @@
         android:minSdkVersion="10"
         android:targetSdkVersion="19" />
 
-    <supports-screens
+  <!--    <supports-screens
         android:anyDensity="true"
         android:largeScreens="true"
         android:normalScreens="true"
         android:resizeable="true"
         android:smallScreens="true"
-        android:xlargeScreens="true" />
+        android:xlargeScreens="true" />-->
 
     <!-- Permiso de acceso a todas las APIs de internet -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -37,12 +37,11 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity
+        android:label="EHC">
+        
+       <activity
             android:name="ehc.net.LogIn"
             android:configChanges="keyboard|keyboardHidden|orientation"
-            android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Sherlock.NoActionBar" >
             <intent-filter>
@@ -54,7 +53,6 @@
         <activity
             android:name="ehc.net.MainMenu"
             android:configChanges="keyboard|keyboardHidden|orientation"
-            android:label="@style/AppTheme"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Sherlock.NoActionBar" >
             <intent-filter>
