--- a/EverywhereHouseController/project.properties
+++ b/EverywhereHouseController/project.properties
@@ -13,4 +13,4 @@
 # Project target.
 target=android-14
 sdk.buildtools=18.1.1
-android.library.reference.1=libs/library
+android.library.reference.1=libs\\library
