--- a/EverywhereHouseController/project.properties
+++ b/EverywhereHouseController/project.properties
@@ -14,3 +14,4 @@
 target=android-14
 sdk.buildtools=18.1.1
 android.library.reference.1=libs\\library
+android.library.reference.2=libs/CalendarLibrary
