[ADDED] Event fragment into calendar view

--- a/EverywhereHouseController/AndroidManifest.xml
+++ b/EverywhereHouseController/AndroidManifest.xml
@@ -148,6 +148,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="ehc.net.CaldroidSampleActivity"
+            android:theme="@style/Theme.Sherlock.NoActionBar" >
+            <intent-filter>
+                <action android:name="android.intent.action.CaldroidSampleActivity" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>        
     </application>
 
 </manifest>
