[FIXED] Error in cast from Object to Double.

--- a/EverywhereHouseController/AndroidManifest.xml
+++ b/EverywhereHouseController/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:normalScreens="true"
         android:resizeable="true"
         android:smallScreens="true"
-        android:xlargeScreens="true" />
+        android:xlargeScreens="false" />
     
 
 
